src/test/deca/context/valid/created/miscellaneous/assign_int_int.deca
// Description :
//    test  assign entre un int et un int
//
// Resultats :
//		Ok

{
int a = 1;
int b;
b = a;
}
