src/test/deca/context/invalid/created/binary_exp/op_bool/and_boolean_int.deca
// Description :
//    test and entre un boolean et un int
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: (3.33) Type gauche boolean. Type droit int Type attendu: ‘boolean’
class A{}
{
boolean a;
int b;
boolean c = a && b;
}
